--- a/main-files/dashboard/assets/scss/_variables.scss
+++ b/main-files/dashboard/assets/scss/_variables.scss
@@ -3,7 +3,7 @@
   --black: #000;
   --white: #fff;
   --theme: #4376fb;
-  --theme-fade: rgba(67, 118, 251, 0.12);
+  --theme-fade: #4376fb1f;
   --theme-fade-2: #4377fb62;
   --theme2: #253154;
   --header: #000000;
