--- a/main-files/dashboard/assets/scss/_left-sidebar.scss
+++ b/main-files/dashboard/assets/scss/_left-sidebar.scss
@@ -9,12 +9,19 @@ body {
 .left-sidebar {
    max-width: 335px;
    padding: 32px;
+   padding-bottom: 24px;
    width: 100%;
    background: $white;
    height: 100vh;
    position: sticky;
    top: 0;
    box-shadow: $shadow;
+   overflow-y: auto;
+   &::-webkit-scrollbar {
+      display: none;
+   }
+   -ms-overflow-style: none;
+   scrollbar-width: none;
 
    &-list-container {
       margin-top: 40px;
@@ -25,7 +32,7 @@ body {
             position: relative;
             a {
                color: $text-color-3 !important;
-               padding: 14px 16px;
+               padding: 10px 12px;
                color: #091e42 !important;
                font-weight: 500;
                font-family: $font-roboto;
@@ -47,7 +54,8 @@ body {
                }
 
                i:last-child {
-                  font-size: 16px;
+                  font-size: 12px;
+                  color: #c2c7d0;
                }
             }
 
@@ -60,14 +68,18 @@ body {
                position: relative;
 
                i {
-                  color: $theme-color;
+                  color: $theme-color !important;
+               }
+
+               i:last-child {
+                  transform: rotate(90deg);
                }
             }
 
             // collapse
             .collapsed-items {
                background: #f5f6f7;
-               padding: 12px 24px;
+               padding: 8px 16px;
                padding-top: 24px;
                border-radius: 0px 0px 16px 16px;
                position: relative;
@@ -84,7 +96,7 @@ body {
 
                      a {
                         color: #091e42 !important;
-                        padding: 12px 24px;
+                        padding: 8px 24px;
                         width: 100%;
                         display: block;
                         font-size: 16px;
@@ -94,7 +106,9 @@ body {
                         transition: all 0.3s ease;
 
                         &:hover {
-                           color: $theme-color;
+                           color: $theme-color !important;
+                           border-radius: 0px !important;
+                           background-color: transparent !important;
                         }
 
                         &::before {
@@ -121,6 +135,31 @@ body {
                }
             }
          }
+      }
+   }
+
+   &-user-options {
+      margin-top: auto;
+      width: 100%;
+      display: grid;
+
+      button {
+         background: $theme-color !important;
+         font-size: 18px;
+         font-weight: 400;
+         font-family: $body-font;
+         padding: 16px 0;
+         border-radius: 8px !important;
+
+         i {
+            font-size: 20px;
+         }
+      }
+
+      p {
+         font-size: 12px;
+         font-weight: 400;
+         color: rgba(0, 0, 0, 0.4);
       }
    }
 }
