--- a/main-files/dashboard/assets/scss/_left-sidebar.scss
+++ b/main-files/dashboard/assets/scss/_left-sidebar.scss
@@ -1,6 +1,7 @@
 @use "variables" as *;
 @use "typography" as *;
 @use "colors" as *;
+@use "mixins" as *;
 
 .left-sidebar {
    max-width: 335px;
@@ -9,15 +10,34 @@
    width: 100%;
    background: $white;
    height: 100vh;
-   position: sticky;
+   position: fixed;
    top: 0;
+   left: 0;
    box-shadow: $shadow;
    overflow-y: auto;
+   border: none !important;
+   @include breakpoint(xxxl) {
+      display: flex;
+      flex-direction: column;
+      position: sticky;
+      top: 0;
+      right: unset;
+   }
    &::-webkit-scrollbar {
       display: none;
    }
    -ms-overflow-style: none;
    scrollbar-width: none;
+   &.offcanvas {
+      @include breakpoint(xxxl) {
+         transform: translateX(0) !important;
+         visibility: visible;
+      }
+   }
+   &.show {
+      transform: translateX(0);
+      visibility: visible;
+   }
 
    &-list-container {
       margin-top: 40px;
