--- a/main-files/dashboard/assets/scss/_overview.scss
+++ b/main-files/dashboard/assets/scss/_overview.scss
@@ -27,9 +27,15 @@
             align-items: center;
             gap: 24px;
 
-            button.menu-button i {
-               font-size: 20px;
-               color: $white;
+            button.menu-button {
+               @include breakpoint(xxxl) {
+                  display: none;
+               }
+
+               i {
+                  font-size: 20px;
+                  color: $white;
+               }
             }
 
             div.my-breadcrumb ol {
