--- a/main-files/dashboard/assets/scss/_overview.scss
+++ b/main-files/dashboard/assets/scss/_overview.scss
@@ -2,7 +2,7 @@
 @use "typography" as *;
 @use "mixins" as *;
 
-.car-dashboard-section {
+.overview-dashboard-section {
    width: 100%;
 
    // Car dashboard left
@@ -14,9 +14,15 @@
    }
 
    // Car dashboard center
-   .car-dashboard-content {
-      .car-dashboard-nav {
-         padding: 26px 28px;
+   .overview-dashboard-content {
+      .overview-dashboard-nav {
+         padding: 10px 16px;
+         @include breakpoint(lg) {
+            padding: 20px 24px;
+         }
+         @include breakpoint(xl) {
+            padding: 26px 28px;
+         }
          color: $white;
          background-color: $theme-color-2;
          font-family: $font-inter;
@@ -114,16 +120,41 @@
       }
 
       .main-content {
-         margin-top: 32px;
-         padding: 0 28px;
+         margin-top: 20px;
+         padding: 0 15px;
+         @include breakpoint(lg) {
+            padding: 0 20px;
+            margin-top: 25px;
+         }
+         @include breakpoint(xl) {
+            padding: 0 28px;
+            margin-top: 32px;
+         }
 
          .welcome-content {
-            margin-bottom: 24px;
+            margin-bottom: 18px;
+            @include breakpoint(xl) {
+               margin-bottom: 24px;
+            }
+
+            h5.title {
+               font-weight: 700;
+               font-size: 16px !important;
+               @include breakpoint(md) {
+                  font-size: 20px;
+               }
+               @include breakpoint(lg) {
+                  font-size: 24px;
+               }
+            }
+
             .content-filters {
                button {
-                  padding: 10px 16px;
+                  padding: 6px 16px;
                   font-weight: 500;
                   border-radius: 8px;
+                  font-family: $font-inter;
+                  font-size: 16px;
                }
 
                button:first-child {
@@ -138,6 +169,10 @@
                button:last-child {
                   background-color: $theme-color;
                   color: $white;
+                  display: none;
+                  @include breakpoint(md) {
+                     display: inline-block;
+                  }
                }
             }
          }
@@ -147,7 +182,13 @@
          .block-engaged-user,
          .block-returning-user {
             background: $white;
-            padding: 24px;
+            padding: 16px;
+            @include breakpoint(lg) {
+               padding: 20px;
+            }
+            @include breakpoint(xl) {
+               padding: 24px;
+            }
             color: $text-color-4;
             border-radius: 16px;
             box-shadow: $shadow;
@@ -191,7 +232,13 @@
             .chart-container {
                background: $white;
                box-shadow: $shadow;
-               padding: 20px;
+               padding: 16px;
+               @include breakpoint(lg) {
+                  padding: 20px;
+               }
+               @include breakpoint(xl) {
+                  padding: 24px;
+               }
                position: relative;
                width: 100%;
                height: 330px;
@@ -214,7 +261,13 @@
 
          .revenue-table {
             background: $white;
-            padding: 24px;
+            padding: 16px;
+            @include breakpoint(lg) {
+               padding: 20px;
+            }
+            @include breakpoint(xl) {
+               padding: 24px;
+            }
             padding-bottom: 10px;
             border-radius: 16px;
             box-shadow: $shadow;
@@ -261,16 +314,19 @@
                         font-size: 12px;
                         font-weight: 500;
                         overflow: hidden;
+                        padding: 12px;
                      }
 
                      th:first-child {
                         border-top-left-radius: 16px;
                         border-left-color: $theme-fade !important;
+                        border: 0;
                      }
 
                      th:last-child {
                         border-top-right-radius: 16px;
                         border-right-color: $theme-fade !important;
+                        border: 0;
                      }
                   }
                }
@@ -282,6 +338,7 @@
                         font-weight: 400;
                         color: $text-color-4;
                         padding: 4px 12px;
+                        width: fit-content;
 
                         .chip {
                            border-radius: 4px;
@@ -289,6 +346,7 @@
                            font-size: 12px;
                            color: $white;
                            padding: 4px 8px;
+                           flex-shrink: 0;
                         }
 
                         .chip-available {
@@ -321,6 +379,8 @@
                      }
 
                      td:first-child {
+                        display: flex;
+                        align-items: center;
                         img {
                            width: 32px;
                            height: 32px;
@@ -337,7 +397,13 @@
             background: $white;
             border-radius: 16px;
             box-shadow: $shadow;
-            padding: 24px 20px;
+            padding: 16px 16px;
+            @include breakpoint(lg) {
+               padding: 20px 18px;
+            }
+            @include breakpoint(xl) {
+               padding: 24px 20px;
+            }
 
             div {
                h5 {
@@ -388,7 +454,14 @@
 
          .revenue-by-ads {
             background: $white;
-            padding: 24px;
+            padding: 16px;
+            @include breakpoint(lg) {
+               padding: 20px;
+            }
+            @include breakpoint(xl) {
+               padding: 24px;
+            }
+
             border-radius: 16px;
             box-shadow: $shadow;
 
