Start building create new product page

--- a/main-files/dashboard/assets/scss/main.scss
+++ b/main-files/dashboard/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @use "overview" as *;
 @use "left-sidebar" as *;
 @use "right-sidebar" as *;
+@use "create-new" as *;
 
 body {
    background: $bg-color;
