--- a/main-files/dashboard/assets/css/main.css
+++ b/main-files/dashboard/assets/css/main.css
@@ -18,6 +18,7 @@
   --text-2: #7a8699;
   --text-3: #404a60;
   --text-4: #1c1c1c;
+  --text-5: #091e42;
   --border: #d5d5d5;
   --border-2: #e6e6e6;
   --bg: #f4f6fa;
@@ -1187,6 +1188,9 @@ span {
   color: var(--theme);
 }
 
+.create-product {
+  margin-bottom: 32px;
+}
 .create-product-uploads {
   background: var(--white);
   border-radius: 12px;
@@ -1212,6 +1216,12 @@ span {
   height: 320px;
   border-radius: 16px;
   cursor: pointer;
+  padding: 10px;
+}
+@media (min-width: 992px) {
+  .create-product-uploads .uploads-container label {
+    padding: 0px;
+  }
 }
 .create-product-uploads .uploads-container label i {
   font-size: 49px;
@@ -1224,6 +1234,7 @@ span {
   margin-top: 16px;
   margin-bottom: 16px;
   color: #091e42;
+  text-align: center;
 }
 .create-product-uploads .uploads-container label p.title span {
   color: var(--theme);
@@ -1233,6 +1244,132 @@ span {
   font-family: "Roboto";
   font-size: 14px;
   font-weight: 400;
+  text-align: center;
+}
+.create-product-details {
+  background: var(--white);
+  border-radius: 12px;
+  margin-top: 20px;
+}
+.create-product-details .details-header {
+  padding: 24px 16px;
+}
+.create-product-details .details-header h4 {
+  color: var(--black);
+  font-size: 24px;
+  font-weight: 700;
+}
+.create-product-details .details-container {
+  margin-top: 20px;
+  padding: 24px;
+}
+.create-product-details .details-container label {
+  color: var(--text-5) !important;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Roboto";
+}
+.create-product-details .details-container input {
+  background: var(--body);
+  font-size: 14px;
+  font-weight: 400;
+  border: 1px solid #ebedf0;
+}
+.create-product-details .details-container input::placeholder {
+  color: #505f79;
+  font-family: "Roboto";
+}
+.create-product-details .details-container select {
+  background: var(--body);
+  font-size: 14px;
+  font-weight: 400;
+  appearance: none;
+  padding-right: 30px;
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='gray' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 12px;
+  border: 1px solid #ebedf0;
+}
+.create-product-details .details-container textarea {
+  background: var(--body);
+  font-size: 14px;
+  font-weight: 400;
+  border: 1px solid #ebedf0;
+}
+.create-product-details .details-container textarea::placeholder {
+  color: #505f79;
+  font-family: "Roboto";
+}
+.create-product-colors {
+  background: var(--white);
+  border-radius: 12px;
+  margin-top: 20px;
+}
+.create-product-colors .colors-header {
+  padding: 14px;
+}
+.create-product-colors .colors-header h6 {
+  color: var(--black);
+  font-size: 16px;
+  font-weight: 600;
+  font-family: var(--inter);
+}
+.create-product-colors .colors-container {
+  padding: 20px 24px;
+}
+.create-product-colors .colors-container .colors-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.create-product-colors .colors-container .colors-wrapper label {
+  width: 60px;
+  height: 60px;
+  background: #d2ddfd;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.create-product-colors .colors-container .colors-wrapper label span {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+.create-product-colors .colors-container .colors-wrapper label span.color-1 {
+  background: #b2beb5;
+}
+.create-product-colors .colors-container .colors-wrapper label span.color-2 {
+  background: var(--black);
+}
+.create-product-colors .colors-container .colors-wrapper label span.color-3 {
+  background: #e9cf10;
+}
+.create-product-buttons {
+  margin-top: 32px;
+}
+.create-product-buttons button {
+  font-size: 18px;
+  font-weight: 400;
+}
+.create-product-buttons button[type=submit] {
+  background: transparent;
+  border-radius: 32px;
+  color: var(--text-5);
+  border: 1px solid #dfe2e6;
+}
+.create-product-buttons button[type=reset] {
+  background: #ff9500;
+  border-color: #ff9500;
+  border-radius: 32px;
+  color: var(--white);
+}
+.create-product-buttons p {
+  text-align: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.4);
+  font-family: var(--inter);
 }
 
 body {
