--- a/main-files/dashboard/assets/scss/_variables.scss
+++ b/main-files/dashboard/assets/scss/_variables.scss
@@ -1,23 +1,24 @@
 :root {
-  --body: #f5f6f7;
-  --black: #000;
-  --white: #fff;
-  --theme: #4376fb;
-  --theme-fade: #4376fb1f;
-  --theme-fade-2: #4377fb62;
-  --theme2: #253154;
-  --header: #000000;
-  --text: #555555;
-  --text-2: #7a8699;
-  --text-3: #404a60;
-  --text-4: #1c1c1c;
-  --border: #d5d5d5;
-  --border-2: #e6e6e6;
-  --bg: #f4f6fa;
-  --bg-2: #ecf1ff;
-  --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
-  --footer: #0a111e;
-  --inter: "Inter", sans-serif;
+   --body: #f5f6f7;
+   --black: #000;
+   --white: #fff;
+   --theme: #4376fb;
+   --theme-fade: #4376fb1f;
+   --theme-fade-2: #4377fb62;
+   --theme2: #253154;
+   --header: #000000;
+   --text: #555555;
+   --text-2: #7a8699;
+   --text-3: #404a60;
+   --text-4: #1c1c1c;
+   --text-5: #091e42;
+   --border: #d5d5d5;
+   --border-2: #e6e6e6;
+   --bg: #f4f6fa;
+   --bg-2: #ecf1ff;
+   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
+   --footer: #0a111e;
+   --inter: "Inter", sans-serif;
 }
 
 // Theme Color - Default Colors
@@ -32,6 +33,7 @@ $text-color: var(--text);
 $text-color-2: var(--text-2);
 $text-color-3: var(--text-3);
 $text-color-4: var(--text-4);
+$text-color-5: var(--text-5);
 $header-color: var(--header);
 $border-color: var(--border);
 $border-color-2: var(--border-2);
