Start building View All Products

--- a/main-files/dashboard/assets/scss/main.scss
+++ b/main-files/dashboard/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @use "left-sidebar" as *;
 @use "right-sidebar" as *;
 @use "create-product" as *;
+@use "all-products" as *;
 
 body {
    background: $bg-color;
