--- a/main-files/dashboard/assets/scss/_all-products.scss
+++ b/main-files/dashboard/assets/scss/_all-products.scss
@@ -51,5 +51,64 @@ body {
       border-radius: 16px;
       box-shadow: vars.$shadow;
       margin-top: 24px;
+      padding: 24px;
+
+      table {
+         thead {
+            tr {
+               border: 0;
+               th {
+                  background: vars.$bg-color-2;
+                  padding-left: 12px;
+                  padding-right: 12px;
+                  color: vars.$text-color-5;
+                  font-size: 12px;
+                  font-weight: 500;
+                  font-family: typo.$font-inter;
+                  border-color: vars.$bg-color-2;
+                  border-right: 0;
+
+                  &:first-child {
+                     border-top-left-radius: 12px;
+                  }
+                  &:last-child {
+                     border-top-right-radius: 12px;
+                  }
+               }
+            }
+         }
+
+         tbody {
+            tr {
+               td {
+                  font-size: 12px;
+                  font-weight: 400;
+                  font-family: typo.$font-inter;
+                  color: vars.$text-color-4;
+
+                  .title {
+                     font-family: typo.$body-font;
+                  }
+
+                  img {
+                     max-width: 40px;
+                     height: auto;
+                     width: 100%;
+                  }
+
+                  .table-rating {
+                     background: vars.$body;
+                     padding: 4px 8px;
+                     border-radius: 4px;
+                     font-weight: 500;
+
+                     i {
+                        color: #ffcc00;
+                     }
+                  }
+               }
+            }
+         }
+      }
    }
 }
