Register 2 page complete with 100% responsive

--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -90,4 +90,8 @@ Version: 1.0.0
 @import "category";
 // >> Video <<//
 @import "video";
+// >> Register 2 <<//
+@import "register-2";
+// >> Footer 2 <<//
+@import "footer-2";
 //>> Template Section Style End <<//
