--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -8654,4 +8654,148 @@ span {
   }
 }
 
+.register-2-section {
+  padding: 50px 0px;
+}
+.register-2-section .register-2-header p {
+  margin-top: 10px;
+}
+.register-2-section .register-2-content {
+  margin-top: 30px;
+  border-radius: 16px;
+  background: var(--white);
+  box-shadow: 0px 4px 72px 0px rgba(0, 0, 0, 0.1215686275);
+  border: 1px solid #e0e1e2;
+  overflow: hidden;
+}
+@media (min-width: 768px) {
+  .register-2-section .register-2-content {
+    margin-top: 35px;
+  }
+}
+@media (min-width: 992px) {
+  .register-2-section .register-2-content {
+    margin-top: 40px;
+  }
+}
+.register-2-section .register-2-content .register-2-form-container {
+  padding: 40px;
+}
+.register-2-section .register-2-content .register-2-form-container .form-header h2 {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div .form-item {
+  margin-bottom: 24px;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div label {
+  color: #0c0d0d;
+  font-size: 18px;
+  font-weight: 400;
+  font-feature-settings: "Kanit", sans-serif;
+  margin-bottom: 12px;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div div.input {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--bg);
+  border-radius: 8px;
+  padding: 18px;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div div.input input {
+  background: transparent;
+  border: none;
+  border-radius: 8px;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: "Kanit", sans-serif;
+  color: #575a61;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div div.input input:focus {
+  outline: none;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div button[type=submit] {
+  background: var(--theme);
+  color: var(--white);
+  border: none;
+  border-radius: 8px;
+  padding: 12px 0;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Kanit", sans-serif;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.register-2-section .register-2-content .register-2-form-container .register-form div button[type=submit]:hover {
+  background: darkblue;
+}
+.register-2-section .register-2-content .register-2-form-container .hr-text {
+  padding: 35px 0px;
+}
+.register-2-section .register-2-content .register-2-form-container .hr-text div {
+  position: relative;
+  height: 1px;
+  background: #e0e1e2;
+  width: 100%;
+}
+.register-2-section .register-2-content .register-2-form-container .hr-text div .hr-text-content {
+  display: inline-block;
+  background: #fff;
+  font-weight: 300;
+  font-size: 16px;
+  color: #575a61;
+  font-family: "Kanit", sans-serif;
+  border-radius: 30rem;
+  padding: 0.2rem 1rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.register-2-section .register-2-content .register-2-form-container .register-2-social a {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 1px solid #e0e1e2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+.register-2-section .register-2-content .register-2-form-container .register-2-social a:hover {
+  background: var(--theme);
+  border-color: var(--theme);
+  color: var(--white);
+}
+.register-2-section .register-2-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: linear-gradient(180.66deg, rgba(17, 156, 255, 0.6) 3.99%, rgba(67, 118, 251, 0.5) 51.71%, rgba(67, 118, 251, 0) 99.43%);
+}
+
+.footer-2 div.container {
+  padding: 32px 0;
+  font-weight: 300;
+  font-size: 18px;
+  color: #121721;
+}
+.footer-2 div.container .separator {
+  color: #b2c7fd;
+}
+.footer-2 div.container ul li a {
+  transition: all 0.3s ease;
+}
+.footer-2 div.container ul li a:hover {
+  color: #4376fb;
+  text-decoration: underline;
+}
+
 /*# sourceMappingURL=main.css.map */
