--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -8781,6 +8781,18 @@ span {
   background: linear-gradient(180.66deg, rgba(17, 156, 255, 0.6) 3.99%, rgba(67, 118, 251, 0.5) 51.71%, rgba(67, 118, 251, 0) 99.43%);
 }
 
+.login-2-section .remember-me label {
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  color: #555 !important;
+  font-family: "Kanit", sans-serif !important;
+}
+.login-2-section .forgot-password {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Kanit", sans-serif;
+}
+
 .footer-2 div.container {
   padding: 32px 0;
   font-weight: 300;
