--- a/main-files/assets/scss/_register-2.scss
+++ b/main-files/assets/scss/_register-2.scss
@@ -152,3 +152,23 @@
       );
    }
 }
+
+.login-2-section {
+   .remember-me {
+      input {
+      }
+
+      label {
+         font-weight: 400 !important;
+         font-size: 16px !important;
+         color: #555 !important;
+         font-family: $body-font !important;
+      }
+   }
+
+   .forgot-password {
+      font-size: 16px;
+      font-weight: 400;
+      font-family: $body-font;
+   }
+}
