Start building register-3

--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -91,7 +91,7 @@ Version: 1.0.0
 // >> Video <<//
 @import "video";
 // >> Register 2 <<//
-@import "register-2";
+@import "auth";
 // >> Footer 2 <<//
 @import "footer-2";
 //>> Template Section Style End <<//
