--- a/main-files/assets/scss/_auth.scss
+++ b/main-files/assets/scss/_auth.scss
@@ -52,7 +52,7 @@
                   justify-content: space-between;
                   background: $bg-color;
                   border-radius: 8px;
-                  padding: 18px;
+                  padding: 16px 18px;
 
                   input {
                      background: transparent;
@@ -167,5 +167,123 @@
       font-size: 16px;
       font-weight: 400;
       font-family: $body-font;
+   }
+}
+
+// register 3
+.register-3-section {
+   .register-3-content {
+      width: 100%;
+      height: 100vh;
+      display: flex !important;
+
+      .register-3-left {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         flex-direction: column;
+         box-shadow: 12px 0px 72px 0px #00000029;
+         width: 100%;
+         height: 100%;
+      }
+
+      .register-3-right {
+         display: grid;
+         height: 100%;
+         position: relative;
+         background: linear-gradient(
+            180.66deg,
+            rgba(104, 17, 255, 0.24) 3.99%,
+            rgba(104, 17, 255, 0.08) 51.71%,
+            rgba(104, 17, 255, 0) 99.43%
+         );
+
+         .floating-home-button {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            @include breakpoint(xl) {
+               right: 45px;
+               top: 45px;
+            }
+            @include breakpoint(xxl) {
+               right: 55px;
+               top: 55px;
+            }
+            box-shadow: 0px 0px 24px 0px #4376fb7a;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: $theme-color;
+            color: $white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            i {
+               font-size: 30px;
+            }
+         }
+
+         .register-3-img {
+            img {
+               max-width: 700px;
+               width: 100%;
+               height: auto;
+               flex-shrink: 1;
+               @include breakpoint(lg) {
+                  max-height: 645px;
+               }
+            }
+         }
+
+         .features-container {
+            margin: 40px;
+            margin-top: 0px;
+
+            .feature-item {
+               border: 1px solid #b2c7fd;
+               padding: 18px;
+               border-radius: 16px;
+
+               h4 {
+                  margin-bottom: 8px;
+               }
+               p {
+                  color: #575a61;
+                  font-size: 16px;
+                  line-height: 24px;
+               }
+            }
+         }
+
+         footer.footer-2 {
+            align-self: flex-end;
+
+            .container {
+               padding: 26px;
+
+               .footer-2-merge-3 {
+                  @include breakpoint(lg) {
+                     flex-direction: column !important;
+                     p {
+                        text-align: center !important;
+                     }
+
+                     ul {
+                        margin: 0 auto !important;
+                        margin-top: 8px !important;
+                     }
+                  }
+                  @include breakpoint(xl) {
+                     flex-direction: row !important;
+                     ul {
+                        margin: 0 !important;
+                     }
+                  }
+               }
+            }
+         }
+      }
    }
 }
