--- a/main-files/assets/scss/_auth.scss
+++ b/main-files/assets/scss/_auth.scss
@@ -66,6 +66,7 @@
                      font-weight: 300;
                      font-family: $body-font;
                      color: #575a61;
+                     width: 100%;
 
                      &:focus {
                         outline: none;
