--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -8898,6 +8898,18 @@ span {
   }
 }
 
+.login-3-section .remember-me label {
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  color: #555 !important;
+  font-family: "Kanit", sans-serif !important;
+}
+.login-3-section .forgot-password {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Kanit", sans-serif;
+}
+
 .footer-2 div.container {
   padding: 32px 0;
   font-weight: 300;
